<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:title="@string/individual_auth_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/default_form_element_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/individual_auth_authorization" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbLogin"
            android:layout_width="@dimen/default_form_element_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_inner_margin_double"
            android:text="@string/individual_auth_login"
            app:icon="@drawable/ic_baseline_login_24"
            app:iconGravity="end"
            app:iconPadding="@dimen/default_icon_size_inverted"
            app:iconSize="@dimen/default_icon_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbRegistration"
            android:layout_width="@dimen/default_form_element_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_inner_margin"
            android:text="@string/individual_auth_registration"
            app:icon="@drawable/ic_baseline_how_to_reg_24"
            app:iconGravity="end"
            app:iconPadding="@dimen/default_icon_size_inverted"
            app:iconSize="@dimen/default_icon_size" />

    </LinearLayout>

</FrameLayout>